# WebServer

./: .gitignore  ASocket.cpp  CHUNK.txt  Dockerfile  Makefile  Parser.cpp  Parser.hpp  README.md  ServerSocket.cpp  TODO.md  Token.cpp  Token.hpp  Webserv.hpp  default.conf  docker-compose.yml  index.html  main.c  main.cpp  marianna_todo.txt  run.sh  run_docker.sh  webserv  webserv 2
Logger/: ALogger.cpp  ALogger.hpp  AccessLogger.cpp  AccessLogger.hpp
Pages/: 404.html  406.html  cgi.html  files.html  form.html  index.html  index.js  login.html  login.js  styles.css  upload.html  upload.js  upload.py
Parser/: Parser.cpp  Parser.hpp  Token.cpp  Token.hpp
Response/: Chunk.cpp  Chunk.hpp  ErrorResponse.cpp  ErrorResponse.hpp  FileUtils.cpp  FileUtils.hpp  JsonResponse.cpp  JsonResponse.hpp  ServerResponse.cpp  ServerResponse.hpp
Server/: CGIEventContext.hpp  CGIFileDescriptor.cpp  CGIFileDescriptor.hpp  CGIResponseParser.cpp  CGIResponseParser.hpp  CGISocket.cpp  CGISpawner.cpp  CGISpawner.hpp  Chunk.cpp  Chunk.hpp  ClientEventContext.hpp  ClientSocket.cpp  ClientSocket.hpp  ConnectionContext.hpp  EpollTimeoutTimer.hpp  FileDescriptor.hpp  HTTPResponseSender.cpp  HTTPResponseSender.hpp  IEventContext.hpp  IIOHandler.hpp  IOCGIContext.hpp  IOCGIHandler.cpp  IOCGIHandler.hpp  (+33 more)
Tests/unit/: CMakeLists.txt  RequestHeaderParserTests.cpp  RequestMultipartBodyParserTests.cpp  ServerRequestParserHelpersTests.cpp  ServerRequestParserTests.cpp  ServerResponseTests.cpp  data.txt  parser_test.cpp  tests.cpp
Tests/unit/configs/: goodconfig.conf
Tests/unit/test_files/: 1.txt
(+40 files in other folders)
